--- a/Templates/Blazor8/Template/Template.Business/Template.Business.csproj
+++ b/Templates/Blazor8/Template/Template.Business/Template.Business.csproj
@@ -8,11 +8,15 @@
 
   <ItemGroup>
     <Folder Include="Services\" />
-    <Folder Include="Repositories\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Template.Domain\Template.Domain.csproj" />
+    <ProjectReference Include="..\Template.Infra\Template.Infra.csproj" />
   </ItemGroup>
 
 </Project>
