--- a/Templates/Blazor8/Template/Template/Template/appsettings.json
+++ b/Templates/Blazor8/Template/Template/Template/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "DebugInMemory": true,
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Template-eed5bcee-c69e-477b-b48e-4dc91649028d;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
