--- a/Templates/Blazor8/Template/Template/Template.Client/Template.Client.csproj
+++ b/Templates/Blazor8/Template/Template/Template.Client/Template.Client.csproj
@@ -9,8 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.4" />
+    <PackageReference Include="MudBlazor" Version="6.19.1" />
   </ItemGroup>
 
 </Project>
