--- a/Templates/Blazor8/Template/Template.Infra/Template.Infra.csproj
+++ b/Templates/Blazor8/Template/Template.Infra/Template.Infra.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\Template.Domain\Template.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Configurations\" />
+  </ItemGroup>
+
 </Project>
